[package]
name = "shut_up_poketwo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "rustls_backend"], version = "0.10.8" }
tokio = { version = "1.8.0", features = ['full'] }